2015-07-22  Titus Brown  <titus@idyll.org>

   * tests/test_streaming_io.py: new shell cmd tests for streaming/piping.
   * scripts/interleave-reads.py: force exactly two input files.
   * scripts/test_scripts.py: remove test_interleave_reads_broken_fq_4 for
   only one input file for interleave-reads.py.
   * scripts/split-paired-reads.py: fix print statement; clarify output.
   * scripts/{normalize-by-median.py,sample-reads-randomly.py,
   trim-low-abund.py}: if stdin is supplied for input, check that -o
   specifies output file.
   * scripts/filter-abund.py: if stdin is supplied for input, check that -o
   specifies output file; switched -o to use argparse.FileType.
   * scripts/extract-long-sequences.py: switched -o to use argparse.FileType.
   * scripts/{abundance-dist,count-median}.py: added '-' handling for output.
   * khmer/kfile.py: change 'check_input_files' to no longer warn that
   '-' doesn't exist'.
   * tests/test-data/paired.fq.2: removed extraneous newline from end.
   * tests/{test_normalize_by_median,test_script_arguments,test_scripts}.py:
   added tests for new code.

2015-07-22  Jacob Fenton  <bocajnotnef@gmail.com>

   * tests/test_read_parsers.py: added workaround for bug in OSX Python

2015-07-21  Jacob Fenton  <bocajnotnef@gmail.com>

   * khmer/{kfile,khmer_args}.py: refactored information passing, made it so
   space checks happen in the right directory.
   * oxli/build_graph.py,sandbox/collect-reads.py,scripts/{
   abundance-dist-single,filter-abund-single,load-into-counting,
   normalize-by-median,trim-low-abund}.py,tests/test_script_arguments.py:
   changed to use new arg structure for checking hashtable save space.
   * oxli/functions.py,scripts/saturate-by-median.py: updated error message
   to mention --force option.
   * scripts/{count-overlap,load-into-counting,make-initial-stoptags,
   partition-graph,sample-reads-randomly}.py: removed unnecessary call to
   check_space.

2015-07-20  Titus Brown  <titus@idyll.org>
